# D-PALI

./: .dockerignore  .gitignore  Dockerfile  MJDATA.TXT  README.md  flexing.xml  gripper_search.db  issues.md  pyproject.toml  requirements.txt  setup.txt
NEW GRIPPER/: DPALI3D.xml  Gripper3D.xml  Shared3D.xml  XMLs explained.txt
NEW GRIPPER/3Dmeshes/: Back_Link_L.STL  Long_Link.STL  Long_Link_L.STL  Short_Link.STL  base_link.STL  base_link2.STL  base_middlecap.stl  finger_base.stl  motor.stl
OLD Gripper/: DPALI-Worked.xml  Gripper-Worked.xml  shared-Worked.xml
OLD Gripper/meshes/: Front_Link_L.STL  Front_Link_R.STL  Short_Link_R.STL
assets/meshes/: Back_Link.STL  Back_Link.stl  Back_Link_L.STL  Back_Link_R.STL  Front_Link.STL  Long_Link.stl  Long_Link_L.STL  Long_Link_R.STL  Short_Link.stl  Short_Link_L.STL  mainbase_top.stl  moon_gear(30 teeth).stl
assets/mjcf/: DPALI3D-2.xml  DPALI3D.xml  Gripper3D-2.xml  Gripper3D.xml  Shared3D-2.xml  Shared3D.xml
d_pali_hand_rl.egg-info/: PKG-INFO  SOURCES.txt
docs/: Improvements.md  actuatorCalc.md  ppoTrainingExplanation.md
envs/: __init__.py  d_pali_hand.py
models/: sac_her_dpali_hand_V0.1
models/Ori_V5.0/: README.md  v5.0_normalization.pkl  v5.1_normalization.pkl  v5.2_normalization.pkl  v5.3_normalization.pkl  (+1 more)
scripts/: Manual_control.py  envTest.py  expert_data_test.py  genRotateData.py  rotateTest.py  test.py  test2.py  view_dpali.py
training/: SAC_eval.py  SAC_train.py  TD3_tune.py  callbacks.py  hyperparameter.py  sweep_optuna.py  test_PPO.py  train_PPO.py  train_TD3.py  train_sac_her.py
(+6 files in other folders)
